tests/records/ill-typed/bad-records-20.stella
language core;

extend with #records;

fn main(x : Nat) -> Nat {
  return
    (
      fn (x : fn(Nat) -> Nat) {
        return fn (y : Nat) {
          return { x = x, y = if Nat::iszero(x(0)) then false else true }
        }
      }
    )
    (fn (x : Nat) { return x})
    (if true then succ(0) else 0).y
}
